1) implements search store 2) bugs :the website of ali express is cutting 3) bug: in FAQ and Yuval page there is couple of titles

--- a/app/src/main/res/layout/fragment_main_board.xml
+++ b/app/src/main/res/layout/fragment_main_board.xml
@@ -21,16 +21,17 @@
             android:background="@drawable/bg_advance_search"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            android:visibility="gone"
             app:layout_constraintHorizontal_bias="0.05"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             />
 
-        <android.widget.SearchView
-            android:id="@+id/searchStore"
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/searchStore1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="7dp"
+            android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/bg_round"
             android:iconifiedByDefault="false"
@@ -38,7 +39,7 @@
             android:queryHint="@string/search_store"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/ivAdvanceSearch"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             />
 
