--- a/app/src/main/res/layout/special_website.xml
+++ b/app/src/main/res/layout/special_website.xml
@@ -29,6 +29,7 @@
         app:layout_constraintHeight_percent=".2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivWebsiteBanner"
+        android:visibility="gone"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
