--- a/app/src/main/res/layout/fragment_reg_first_associate.xml
+++ b/app/src/main/res/layout/fragment_reg_first_associate.xml
@@ -80,7 +80,7 @@
         app:layout_constraintWidth_percent="0.93" />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvCityTitle"
+        android:id="@+id/tvMyAssosiationTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/stage46"
@@ -105,7 +105,7 @@
         app:layout_constraintHeight_percent="0.134"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/etAssociationName"
-        app:layout_constraintTop_toBottomOf="@+id/tvCityTitle"
+        app:layout_constraintTop_toBottomOf="@+id/tvMyAssosiationTitle"
         app:layout_constraintWidth_default="percent"
         app:layout_constraintWidth_percent="0.93">
         >
