Implements  my area of contributer ,design and functionality

--- a/app/src/main/res/layout/fragment_my_area_contributer.xml
+++ b/app/src/main/res/layout/fragment_my_area_contributer.xml
@@ -76,12 +76,12 @@
                 android:text="@string/family_name"
                 android:textColor="@color/grey1"
                 android:textSize="12sp"
-                app:layout_constraintBottom_toTopOf="@+id/etAssociationName"
-                app:layout_constraintStart_toStartOf="@+id/etAssociationName"
+                app:layout_constraintBottom_toTopOf="@+id/etUserFName"
+                app:layout_constraintStart_toStartOf="@+id/etUserFName"
                 />
 
             <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/etAssociationName"
+                android:id="@+id/etUserFName"
                 style="@style/myAreaSectionEditText"
                 android:layout_width="0dp"
                 android:background="@drawable/shape_field_unfill"
@@ -104,7 +104,7 @@
                 android:id="@+id/tvMyAssosiationTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/family_name"
+                android:text="@string/selected_association"
                 android:textColor="@color/grey1"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toTopOf="@+id/rlAssociation"
@@ -127,6 +127,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:background="@color/transparent"
+                        android:paddingStart= "24dp"
+                        android:paddingEnd="24dp"
                         android:spinnerMode="dropdown" />
 
                     <androidx.appcompat.widget.AppCompatImageView
@@ -142,36 +144,6 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            style="@style/myAreaSection"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:context=".registration.fragment.RegFirstFragment"
-            >
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/tvNotFindAssociationTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/didnt_find"
-                android:textColor="@color/grey1"
-                android:textSize="12sp"
-                app:layout_constraintBottom_toTopOf="@+id/etNotFindAssociation"
-                app:layout_constraintStart_toStartOf="@+id/etNotFindAssociation"
-                />
-
-            <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/etNotFindAssociation"
-                style="@style/myAreaSectionEditText"
-                android:layout_width="0dp"
-                android:background="@drawable/shape_field_unfill"
-                android:paddingStart="10dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvNotFindAssociationTitle"
-                app:layout_constraintWidth_default="percent"
-                app:layout_constraintWidth_percent="0.93" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             style="@style/myAreaSection"
@@ -407,85 +379,6 @@
                 app:layout_constraintWidth_percent="0.93" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            style="@style/myAreaSection"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:context=".registration.fragment.RegFirstFragment"
-            >
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/tvPasswordTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/password"
-                android:textColor="@color/grey1"
-                android:textSize="12sp"
-                app:layout_constraintBottom_toTopOf="@+id/etPassword"
-                app:layout_constraintStart_toStartOf="@+id/etPassword"
-                />
-
-            <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/etPassword"
-                style="@style/myAreaSectionEditText"
-                android:layout_width="0dp"
-                android:background="@drawable/shape_field_unfill"
-                android:inputType="textPassword"
-                android:paddingStart="10dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvPasswordTitle"
-                app:layout_constraintWidth_default="percent"
-                app:layout_constraintWidth_percent="0.93" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            style="@style/myAreaSection"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:context=".registration.fragment.RegFirstFragment"
-            >
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/tvDescription"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@string/description"
-                android:textColor="@color/grey1"
-                android:textSize="12sp"
-                app:layout_constraintBottom_toTopOf="@+id/cbIRead"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintWidth_default="percent"
-                app:layout_constraintWidth_percent="0.93"
-                />
-
-            <androidx.appcompat.widget.AppCompatCheckBox
-                android:id="@+id/cbIRead"
-                style="@style/myAreaSectionEditText"
-                android:layout_width="wrap_content"
-                android:paddingStart="10dp"
-                android:text="@string/i_red"
-                app:layout_constraintStart_toStartOf="@+id/tvDescription"
-                app:layout_constraintTop_toBottomOf="@+id/tvDescription"
-                 />
-
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/tvTermOfUse"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:clickable="true"
-                android:focusable="true"
-                android:text="@string/term_of_use"
-                android:textColor="@color/button_choobudo"
-                android:textSize="12sp"
-                app:layout_constraintBottom_toBottomOf="@+id/cbIRead"
-                app:layout_constraintStart_toEndOf="@+id/cbIRead"
-                app:layout_constraintTop_toTopOf="@+id/cbIRead" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
