--- a/app/src/main/res/layout/fragment_my_area_manager.xml
+++ b/app/src/main/res/layout/fragment_my_area_manager.xml
@@ -14,8 +14,7 @@
         style="@style/myAreaSection"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/edit_user_detaild"
-        android:text="@string/private_details"
+        android:background="@drawable/edit_user_details"
         android:textColor="@color/white"
         />
 
@@ -54,7 +53,23 @@
         android:id="@+id/frMangerContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-         />
+        >
+
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnSave"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|bottom"
+            android:layout_marginBottom="32dp"
+            android:background="@drawable/update_done"
+            />
+
+
+    </com.google.android.material.circularreveal.CircularRevealFrameLayout>
+
+
+
 
 
 </androidx.appcompat.widget.LinearLayoutCompat>
