Implements  my area of association ,design and functionality

--- a/app/src/main/res/layout/fragment_reg_third_associate.xml
+++ b/app/src/main/res/layout/fragment_reg_third_associate.xml
@@ -58,7 +58,7 @@
 
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvMyAssosiationTitle"
+        android:id="@+id/tvCityTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/city"
@@ -78,7 +78,7 @@
             app:layout_constraintHeight_default="percent"
             app:layout_constraintHeight_percent="0.134"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvMyAssosiationTitle"
+            app:layout_constraintTop_toBottomOf="@+id/tvCityTitle"
             app:layout_constraintWidth_default="percent"
             app:layout_constraintWidth_percent="0.93"/>
 
