--- a/app/src/main/res/layout/fragment_reg_first_associate.xml
+++ b/app/src/main/res/layout/fragment_reg_first_associate.xml
@@ -66,7 +66,7 @@
         app:layout_constraintVertical_bias="0.303" />
 
     <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/etUserFName"
+        android:id="@+id/etAssociation"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/shape_field_unfill"
@@ -78,6 +78,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tvAssociateNameTitle"
         app:layout_constraintWidth_default="percent"
         app:layout_constraintWidth_percent="0.93" />
+
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvMyAssosiationTitle"
@@ -91,7 +92,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.537" />
 
-
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/llTabsContainer"
         android:layout_width="0dp"
@@ -100,11 +100,11 @@
         android:gravity="center"
         android:orientation="horizontal"
         android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="@+id/etUserFName"
+        app:layout_constraintEnd_toEndOf="@+id/etAssociation"
         app:layout_constraintHeight_default="percent"
         app:layout_constraintHeight_percent="0.134"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/etUserFName"
+        app:layout_constraintStart_toStartOf="@+id/etAssociation"
         app:layout_constraintTop_toBottomOf="@+id/tvMyAssosiationTitle"
         app:layout_constraintWidth_default="percent"
         app:layout_constraintWidth_percent="0.93">
